# backend/pkg/api/alerts/func_alertimpact.go
@@ -28,7 +28,7 @@ import (
 // @Param step query int64 true "查询步长(us)"
 // @Success 200 {object} []response.GetServiceEntryEndpointsResponse
 // @Failure 400 {object} code.Failure
-// @Router /api/alerts/impact [post]
+// @Router /api/alerts/event/impact [get]
 func (h *handler) AlertImpact() core.HandlerFunc {
 	return func(c core.Context) {
 		req := new(request.AlertImpactRequest)
